Replaced images and fixed img alignment issues

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@
   flex-direction: row;
   text-align: center;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   margin-bottom: 250px;
 }
